data/Java/20-missing-paren/3/[M]Error.txt
*https://www.w3schools.com/java/java_methods.asp
MyClass.java:7: error: ')' expected
    if (age < 18 {
                ^